# covenant

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  README.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: .env.example  .gitignore  next.config.mjs  package.json  tailwind.config.ts  vercel.json
app/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/components/: AsciiAnimation.tsx  CommandPalette.tsx  Confetti.tsx  ConfettiContainer.tsx  CopyButton.tsx  CreateJobForm.tsx  DIDBadge.tsx  EmptyState.tsx  EscrowVisualizer.tsx  FaucetWidget.tsx  GasTracker.tsx  JobCard.tsx  JobList.tsx  JobTimeline.tsx  JobWizard.tsx  LiveFeed.tsx  LoadingSkeleton.tsx  NavBar.tsx  NavigationProgress.tsx  NotificationBell.tsx  OnboardingTour.tsx  Pagination.tsx  PixelAgent.tsx  PixelAvatar.tsx  PixelBattle.tsx  ProfileGate.tsx  ProfileModal.tsx  Providers.tsx  ReputationBadge.tsx  ReputationScore.tsx  StatusBadge.tsx  SubmitWorkModal.tsx  ThemeToggle.tsx  Toast.tsx  ToastContainer.tsx  TopographicBlob.tsx  TransactionTicker.tsx  TxConfirmation.tsx  TxConfirmationContainer.tsx  (+3 more)
circuits/: build_prover.sh  export_vkey.sh
circuits/word_count/script/: Cargo.toml  build.rs
circuits/word_count/script/src/: main.rs
programs/covenant/: Cargo.toml
programs/covenant/src/: errors.rs  lib.rs  state.rs
programs/covenant/src/instructions/: accept_job.rs  cancel_job.rs  create_job.rs  mod.rs  submit_completion.rs
sdk/: README.md  package.json  tsconfig.json  vkey_hash.txt
tests/: covenant.ts
(+102 files in other folders)
