[package]
name = "covenant"
version = "0.1.0"
description = "Solana escrow program for trustless job delivery with ZK proof verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "covenant"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
sp1-solana = "0.1.0"
